# optimized-zswap

./: .Module.symvers.cmd  .gitignore  .modules.order.cmd  CMakeLists.txt  README.md  test.c  zsmalloc.c
apps/: CMakeLists.txt  demo  demo.cpp
cmake/: FindKernelHeaders.cmake
include/: allocator.hpp  zsallocator.hpp  zsmalloc.h  zsmalloc.hpp
src/: CMakeLists.txt  allocator.cpp  intel_pin_instrument.cpp  zsmalloc.c
tests/: CMakeLists.txt  test_alloc
